--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "homepage": "https://github.com/halt-hammerzeit/universal-webpack#readme",
   "dependencies": {
     "colors": "^1.1.2",
+    "fake-style-loader": "^1.0.1",
     "fs-extra": "^0.30.0",
     "minimist": "^1.2.0"
   },
