--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-webpack",
-  "version": "0.1.15",
+  "version": "0.1.17",
   "description": "Isomorphic Webpack",
   "main": "index.umd.js",
   "jsnext:main": "index.es6.js",
@@ -62,7 +62,8 @@
     "colors": "^1.1.2",
     "fake-style-loader": "^1.0.1",
     "fs-extra": "^0.30.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "validate-npm-package-name": "^2.2.2"
   },
   "bin": {
     "universal-webpack": "./bin/universal-webpack.js"
