--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   "peerDependencies": {
     "webpack": "*"
   },
+  "dependencies": {
+    "babel-runtime": "^6.6.1"
+  },
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
-    "babel-loader": "^6.2.2",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-react-display-name": "^6.5.0",
     "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
-    "babel-runtime": "^6.6.1",
     "chai": "^3.5.0",
-    "istanbul": "^1.0.0-alpha.2",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^2.5.3",
     "npm-run-all": "^1.4.0",
     "rimraf": "^2.5.0",
@@ -31,14 +31,10 @@
     "test": "mocha --compilers js:babel-core/register --colors --bail --reporter spec test/ --recursive",
     "test-coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register --colors --reporter dot test/ --recursive",
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --compilers js:babel-core/register --colors --reporter spec test/ --recursive",
-    "gh-pages": "webpack --action=gh-pages --colors --config ./config",
-    "deploy-gh-pages": "TARGET=gh-pages node ./config/deploy-gh-pages.js",
     "clean-for-build": "rimraf ./build/**/*",
     "build-modules": "babel ./source --optional runtime --out-dir ./build --source-maps",
     "build": "npm-run-all clean-for-build build-modules",
-    "commit-new-build": "git commit --all --message=\"Update build\"",
-    "prepublish": "npm-run-all test build",
-    "watch": "babel scripts/watch.js | node"
+    "prepublish": "npm-run-all build test"
   },
   "repository": {
     "type": "git",
