--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "universal-webpack",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Isomorphic Webpack",
-  "main": "index.umd.js",
-  "jsnext:main": "index.es6.js",
+  "main": "index.common.js",
+  "module": "index.es6.js",
   "peerDependencies": {
     "webpack": "*",
     "extract-text-webpack-plugin": "*"
@@ -18,12 +18,12 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
-    "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-react-display-name": "^6.5.0",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "better-npm-run": "0.0.14",
     "chai": "^3.5.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "istanbul": "^1.1.0-alpha.1",
@@ -37,9 +37,24 @@
     "test-coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register --colors --reporter dot test/ --recursive",
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --compilers js:babel-core/register --colors --reporter spec test/ --recursive",
     "clean-for-build": "rimraf ./build/**/*",
-    "build-modules": "babel ./source --optional runtime --out-dir ./build --source-maps",
-    "build": "npm-run-all clean-for-build build-modules",
+    "build-commonjs-modules": "better-npm-run build-commonjs-modules",
+    "build-es6-modules": "better-npm-run build-es6-modules",
+    "build": "npm-run-all clean-for-build build-commonjs-modules build-es6-modules",
     "prepublish": "npm-run-all build test"
+  },
+  "betterScripts": {
+    "build-commonjs-modules": {
+      "command": "babel ./source --out-dir ./build --source-maps",
+      "env": {
+        "BABEL_ENV": "commonjs"
+      }
+    },
+    "build-es6-modules": {
+      "command": "babel ./source --out-dir ./es6 --source-maps",
+      "env": {
+        "BABEL_ENV": "es6"
+      }
+    }
   },
   "repository": {
     "type": "git",
