--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-webpack",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Isomorphic Webpack",
   "main": "index.common.js",
   "module": "index.es6.js",
@@ -67,7 +67,7 @@
     "server",
     "react"
   ],
-  "author": "Halt Hammerzeit <halt.hammerzeit.at@gmail.com>",
+  "author": "catamphetamine <purecatamphetamine@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/catamphetamine/universal-webpack/issues"
