--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-webpack",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Isomorphic Webpack",
   "main": "index.common.js",
   "module": "index.es6.js",
@@ -39,7 +39,7 @@
     "build-commonjs-modules": "better-npm-run build-commonjs-modules",
     "build-es6-modules": "better-npm-run build-es6-modules",
     "build": "npm-run-all clean-for-build build-commonjs-modules build-es6-modules",
-    "prepublish": "npm-run-all build test"
+    "prepublish": "crlf --set=LF bin/* && npm-run-all build test"
   },
   "betterScripts": {
     "build-commonjs-modules": {
