--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "better-npm-run": "0.0.14",
     "chai": "^3.5.0",
+    "crlf": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^2.5.3",
