--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "universal-webpack",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "Isomorphic Webpack",
   "main": "index.common.js",
   "module": "index.es6.js",
   "peerDependencies": {
-    "webpack": "*",
-    "extract-text-webpack-plugin": "*"
+    "webpack": ">=2"
   },
   "dependencies": {
     "colors": "^1.1.2",
@@ -27,10 +26,11 @@
     "crlf": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "istanbul": "^1.1.0-alpha.1",
+    "mini-css-extract-plugin": "^0.2.0",
     "mocha": "^2.5.3",
     "npm-run-all": "^1.4.0",
     "rimraf": "^2.5.0",
-    "webpack": "^3.10.0"
+    "webpack": "^4.1.1"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --colors --bail --reporter spec test/ --recursive",
