--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,13 @@
 {
 	"presets":
 	[
-		"react", 
-		"es2015", 
-		"stage-0"
+		"env"
 	],
 
 	"plugins":
 	[
 		"transform-runtime",
-		"transform-react-display-name"
+		"transform-object-rest-spread",
+		"transform-class-properties"
 	]
 }
