--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
-    "babel-plugin-transform-react-display-name": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-env": "^1.6.1",
     "better-npm-run": "0.0.14",
     "chai": "^3.5.0",
     "crlf": "^1.1.1",
