--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "universal-webpack",
-  "version": "0.8.0",
+  "version": "0.8.2",
   "description": "Isomorphic Webpack",
-  "main": "index.common.js",
-  "module": "index.es6.js",
+  "main": "index.cjs",
+  "module": "index.js",
+  "type": "module",
   "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "require": "./index.cjs"
+    },
+    "./server": {
+      "require": "./server.cjs"
+    },
+    "./config": {
+      "import": "./config.js",
+      "require": "./config.cjs"
+    }
+  },
   "peerDependencies": {
-    "webpack": ">=2"
+    "webpack": ">=5",
+    "mini-css-extract-plugin": "*"
   },
   "dependencies": {
     "@babel/runtime": "^7.14.6",
@@ -39,7 +54,8 @@
     "clean-for-build": "rimraf ./build/**/*",
     "build-commonjs-modules": "better-npm-run build-commonjs-modules",
     "build-es6-modules": "better-npm-run build-es6-modules",
-    "build": "npm-run-all clean-for-build build-commonjs-modules build-es6-modules",
+    "build": "npm-run-all clean-for-build build-commonjs-modules build-es6-modules build:commonjs:package.json",
+    "build:commonjs:package.json": "node create-commonjs-package-json.js",
     "prepublish": "crlf --set=LF bin/* && npm-run-all build test"
   },
   "betterScripts": {
