--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-webpack",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "description": "Isomorphic Webpack",
   "main": "index.cjs",
   "module": "index.js",
@@ -12,7 +12,7 @@
       "require": "./index.cjs"
     },
     "./server": {
-      "require": "./server.cjs"
+      "default": "./server.cjs"
     },
     "./config": {
       "import": "./config.js",
