--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-webpack",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "description": "Isomorphic Webpack",
   "main": "index.cjs",
   "module": "index.js",
@@ -56,7 +56,7 @@
     "build-es6-modules": "better-npm-run build-es6-modules",
     "build": "npm-run-all clean-for-build build-commonjs-modules build-es6-modules build:commonjs:package.json",
     "build:commonjs:package.json": "node create-commonjs-package-json.js",
-    "prepublish": "crlf --set=LF bin/* && npm-run-all build test"
+    "prepublishOnly": "crlf --set=LF bin/* && npm-run-all build test"
   },
   "betterScripts": {
     "build-commonjs-modules": {
